...
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    app:thumbnail="@{viewmodel.thumbnail}"
                    tools:src="@tools:sample/backgrounds/scenic" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbarDetail"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:title="@{viewmodel.title}"
                    tools:title="El señor de los anillos" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
...
            android:gravity="end"
            android:orientation="horizontal"
            app:layout_anchor="@id/appBarLayout"
            app:layout_anchorGravity="bottom|end">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabFavourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:onClick="@{() -> viewmodel.onFavouriteClicked()}"
                android:src="@drawable/ic_favourite_off"
                app:favourite="@{viewmodel.favourite}"
...
